# pico_exploration

./: .gitignore
Blink/: CMakeLists.txt  blink.c  notes.txt
Buchla_Pico_Audio_CDC_MIDI/: CMakeLists.txt  main.cpp  tusb_config.h  usb_descriptors.c
Buchla_Pico_Audio_CDC_MIDI_gen/: QuadPan_ctl_min.h  QuadPan_dsp.h  genlib.cpp  genlib_exportfunctions.h  main.h  midi.c  uac2_app.c
Buchla_Pico_CDC/: main.cpp
Buchla_Pico_Project/: CMakeLists.txt
Buchla_Pico_Project_uac2_cdc/: CMakeLists.txt  main.cpp  tusb_config.h  usb_descriptors.c
Pico-Sequencer-Synth_2/: CMakeLists.txt
Pico_Plateau/: CMakeLists.txt  Dattorro.cpp  Plateau.___cpp  Plateau.___hpp  chorus_flange.cpp  chorus_flange_helper.cpp  chorus_flange_helper.h  genlib.cpp  genlib.h  index.html  midi.cpp  uac2_app.c
Pico_Tonic_USB/: CMakeLists.txt  audio_process.cpp  audio_process.h  main.cpp
Pico_Tonic_i2s/: CMakeLists.txt  audio_process.c  audio_process.cpp  audio_process.h  main.c  main.cpp  main.h  project.code-workspace  tusb_config.h
Pico_gen/: CMakeLists.txt  blink.h  chorus_flange.cpp  chorus_flange.h  chorus_flange_helper.cpp  chorus_flange_helper.h  common.h  genlib.cpp  main.cpp  main.h  midi.cpp
Pico_gverb/: CMakeLists.txt  audio_process.c  audio_process.cpp  audio_process.h  gverb.c  gverb.h  index.html  main.c  midi.c  uac2_app.c
Pico_gverb_i2s/: CMakeLists.txt  Pico_gverb_i2s.code-workspace  audio_process.c  audio_process.h  common.h  main.c  main.h  tusb_config.h  uac2_app.c  usb_descriptors.c
usb_audio_vscode/examples/buchla_midi_audio_test/: CMakeLists.txt  main.c  main.h
(+67 files in other folders)
